modificaciones en estilos.css, creacion de que_es.html, leves cambios en index.html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body background="/imgs/fondo3.jpg" id="fondo">
     <header>
-        <nav class="navbar navbar-dark bg-dark">
-            <a href="#">Inicio</a>
-            <a href="#">Que es CS GO</a>
+        <nav class="navbar navbar-dark bg-dark" id="global">
+            <a href="index.html">Inicio</a>
+            <a href="que_es.html">Qué es CS:GO</a>
             <a href="#">Quienes somos</a>
             <a href="#">Comunidad toxica</a>
             <a href="#">Contacto</a>
