--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 <body background="/imgs/fondo3.jpg" id="fondo">
     <header>
-        <nav class="navbar navbar-dark bg-dark" id="global">
+        <nav class="navbar navbar-dark bg-dark" >
             <a href="index.html">Inicio</a>
             <a href="que_es.html">Qué es CS:GO</a>
-            <a href="#">Quienes somos</a>
-            <a href="#">Comunidad toxica</a>
+            <a href="quienes_somos.html">Quienes somos</a>
             <a href="#">Contacto</a>
         </nav>
                 
