creacion de contacto.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="index.html">Inicio</a>
             <a href="que_es.html">Qué es CS:GO</a>
             <a href="quienes_somos.html">Quienes somos</a>
-            <a href="#">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
                 
         <div class="row">
@@ -31,6 +31,7 @@
             </div>
         </div>
     </header>
+    <hr style="border:15px;"><hr style="border:2px;">
     <section>
         <h3>
             Comunidad de mujeres que juegan al CS:GO (y otros), libre de acoso.
