--- a/que_es.html
+++ b/que_es.html
@@ -17,15 +17,13 @@
             <a href="index.html">Inicio</a>
             <a href="que_es.html">Qué es CS:GO</a>
             <a href="quienes_somos.html">Quienes somos</a>
-            <a href="#">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
         <h2>
             ¿Qué es CS:GO?
         </h2>
     </header>
-    <div class="espacio">
-
-    </div>
+    <hr style="border:15px;"><hr style="border:2px;">
     <div class="row" id="section">
         
         <div class="col-md-4">
