--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -16,24 +16,20 @@
             <a href="index.html">Inicio</a>
             <a href="que_es.html">Qué es CS:GO</a>
             <a href="quienes_somos.html">Quienes somos</a>
-            <a href="#">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
         <h2>
             ¿Quienes somos?
         </h2>
     </header>
-    <div class="espacio">
-
-    </div>
+    <hr style="border:15px;"><hr style="border:2px;">
     <div id="section">
         <p> Somos una comunidad de mujeres de Argentina, Chile y Peru, que se formó con el objetivo de poder jugar en equipo con compañeras elegidas por nosotras. 
             El grupo es principalmente para jugar al CS:GO, aunque jugamos a otros juegos tambien. Nos comunicamos por grupos de Whatsapp, Discord y Steam. 
         </p><br>
         
     </div>
-    <div class="espacio">
-
-    </div>
+    <hr style="border:15px;"><hr style="border:2px;">
     <div id="article1">
         <h4>
             ¿Por qué se creó esta comunidad?
