arreglo de errores

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -6,7 +6,7 @@
     <title>Pibas - Quienes somos</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="shortcut icon" href="/imgs/pibas.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/imgs/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body background="/imgs/fondo3.jpg" id="fondo">
