--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <title>Pibas - Contacto</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="shortcut icon" href="/imgs/pibas.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/imgs/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body background="/imgs/fondo3.jpg" id="fondo">
@@ -37,6 +37,7 @@
             <div class="form-group">
                 <label for="exampleInputEmail" class="labels">Dirección de email*</label>
                 <input id="exampleInputEmail" class="form-control" type="email" aria-describedby="emailHelp" placeholder="Escriba su dirección de email" required="">
+                <div class="valid-feedback">Email valido</div>
                 <div class="invalid-feedback">*Dato obligatorio. Debe tener formato de email</div>
             </div>
             <div class="form-group">
