--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pibas CS:GO</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="shortcut icon" href="/imgs/pibas.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/imgs/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body background="/imgs/fondo3.jpg" id="fondo">
