creacion de adivinanza en que_es.html, correccion de formulario en contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -27,7 +27,7 @@
     </div>
     <hr style="border:15px;"><hr style="border:2px;">
     <div id="article1">
-        <form class="was-validated" action="#">
+        <form class="was-validated" action=mailto:pibas.csgo@gmail.com method="POST" >
             <div class="form-group">
                 <label for="nombre" class="labels">Nombre*</label>
                 <input id="nombre" class="form-control" type="text" placeholder="Escriba su nombre" required="">
