--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -31,9 +31,9 @@
     </div>
     <hr style="border:15px;"><hr style="border:2px;">
     <div id="article1">
-        <h4>
+        <h2>
             ¿Por qué se creó esta comunidad?
-        </h4>
+        </h2>
         <p>Lamentablemente la comunidad gamer esta formada en su mayoría por hombres machistas que consideran a la mujer una intrusa en su mundo. 
             Esto nos pone en situaciones incómodas que incluso lleva a algunas chicas a dejar de jugar.<br>
         </p>
@@ -54,6 +54,15 @@
             <li>¿tenés novio?</li>
 
         </ul>
+    </div>
+    <hr style="border:15px;"><hr style="border:2px;">
+    <div class="footer2">
+        <nav class="navbar navbar-dark bg-dark">
+            <a href="index.html">Inicio</a>
+            <a href="que_es.html">Qué es CS:GO</a>
+            <a href="quienes_somos.html">Quienes somos</a>
+            <a href="contacto.html">Contacto</a>
+        </nav>
     </div>
 
 </body>
