correccion de errores en visualizacion desde celular

--- a/contacto.html
+++ b/contacto.html
@@ -27,7 +27,7 @@
     </div>
     <hr style="border:15px;"><hr style="border:2px;">
     <div id="article1">
-        <form class="was-validated" action=mailto:pibas.csgo@gmail.com method="POST" >
+        <form class="was-validated" action="#" >
             <div class="form-group">
                 <label for="nombre" class="labels">Nombre*</label>
                 <input id="nombre" class="form-control" type="text" placeholder="Escriba su nombre" required="">
@@ -44,7 +44,7 @@
                 <label for="msj" class="labels">Mensaje</label>
                 <textarea class="form-control" id="msj" rows="3"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-primary" value="send">Enviar</button>
         </form>
 
     </div>
