--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="imgs/logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
 </head>
-<body background="imgs/fondo3.jpg" id="fondo">
+<body  id="fondo">
     <header >
         <nav class="navbar navbar-dark bg-dark">
             <a href="index.html">Inicio</a>
