--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h3>
             Comunidad de mujeres que juegan al CS:GO (y otros), libre de acoso.
         </h3>
-       <a id="liveagent_button_online_5738D000000KyjB" href="javascript://Chat" style="display: none;" onclick="liveagent.startChat('5738D000000KyjB')"><!-- Online Chat Content --></a><div id="liveagent_button_offline_5738D000000KyjB" style="display: none;"><!-- Offline Chat Content --></div><script type="text/javascript">
+       <a id="liveagent_button_online_5738D000000KyjB" href="javascript://Chat" style="display: none;" onclick="liveagent.startChat('5738D000000KyjB')">BOT</a><div id="liveagent_button_offline_5738D000000KyjB" style="display: none;"><!-- Offline Chat Content --></div><script type="text/javascript">
 if (!window._laq) { window._laq = []; }
 window._laq.push(function(){liveagent.showWhenOnline('5738D000000KyjB', document.getElementById('liveagent_button_online_5738D000000KyjB'));
 liveagent.showWhenOffline('5738D000000KyjB', document.getElementById('liveagent_button_offline_5738D000000KyjB'));
